// file: proto/gcommon/v1/database/messages/cache_entry.proto
// version: 1.0.0
// guid: c95add2b-ab62-455e-99d1-100c51e3a325
edition = "2023";

package gcommon.v1.database;

import "google/protobuf/any.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "v1/database";

/**
 * Cache entry containing the cached value and metadata.
 * Supports multiple value types with comprehensive expiration
 * and access tracking for cache policies.
 */
message CacheEntry {
  // Cache key (immutable)
  string key = 1;

  // The cached value (flexible type support)
  google.protobuf.Any value = 2 [lazy = true];

  // When the entry was created
  google.protobuf.Timestamp created_at = 3 [lazy = true];

  // When the entry was last accessed
  google.protobuf.Timestamp last_accessed_at = 4 [lazy = true];

  // When the entry expires (optional)
  google.protobuf.Timestamp expires_at = 5 [lazy = true];

  // Number of times the entry has been accessed
  int64 access_count = 6;

  // Size of the entry in bytes
  int64 size_bytes = 7;

  // Entry metadata for extensibility
  map<string, string> metadata = 8 [lazy = true];

  // Cache namespace this entry belongs to
  string namespace = 9;
}
